--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!-- BOTÃO QUE CHAMA A MODAL -->
-<p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-primary" data-toggle="modal">Visualizar anexos</a></p>
+<p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-info" data-toggle="modal">Visualizar anexos</a></p>
 
 <!-- MODAL A SER CHAMADA -->
 <div id="myModal" class="modal hide fade" id="dialog-example" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
