Adiciona o quarto botão

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-primary" data-toggle="modal">Visualizar anexos3</a></p>
 
+<p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-primary" data-toggle="modal">Visualizar anexos4</a></p>
+
 <!-- MODAL A SER CHAMADA -->
 <div id="myModal" class="modal hide fade" id="dialog-example" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-header">
