--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		$(function(){
 			$("#btn-show-modal").click(function(e){
 				e.preventDefault();
-
 				$("#dialog-example").modal('show');
 			});	
 		});
@@ -19,7 +18,12 @@
 <body>
 <!-- BOTÃO QUE CHAMA A MODAL -->
 <p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-info" data-toggle="modal">Visualizar anexos</a></p>
-
+<div>
+    <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
+      <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+      <button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+    </div>
+  </div>
 <!-- MODAL A SER CHAMADA -->
 <div id="myModal" class="modal hide fade" id="dialog-example" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-header">
