--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>INDEX</title>
+	<title>Git</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -17,12 +17,19 @@
 </head>
 <body>
 <!-- BOTÃO QUE CHAMA A MODAL -->
-<p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-info" data-toggle="modal">Visualizar anexos</a></p>
-<div>
-    <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
-      <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-      <button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
-    </div>
+	<div>
+	    <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
+	      <a href="#myModal" id="btn-show-modal" role="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal">Adicionar Anexo</a>
+	      <a href="#myModal" id="btn-show-modal" role="button" class="btn btn-default btn-lg btn-block" data-toggle="modal" >Visualizar anexos</a>
+	      <br>
+		<form>
+            <div class="input-append">
+              <input class="input-large" id="appendedInputButton" type="text" placeholder="Insira o nome do arquivo!!">
+              <button class="btn" type="button">Enviar</button>
+            </div>
+        </form>        
+	</div>
+
   </div>
 <!-- MODAL A SER CHAMADA -->
 <div id="myModal" class="modal hide fade" id="dialog-example" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
