--- a/index.html
+++ b/index.html
@@ -1,292 +1,34 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Proesc Educacional</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
-		<link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon"/>
-		<link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon"/>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-		<script type="text/javascript" src="bootstrap/js/jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-	</head>
-	<body>
-		<div class="header">
-			<div class="header-top">
-				<div class="wrap">
-					<div class="logo">
-						<a href="index.html"><img src="images/logoProescTopo.png" alt="" /></a>
-					</div>
-					<div class="cssmenu">
-						<ul id="nav">
-							<li class="current"><a href="#section-1">COMO FUNCIONA</a></li>
-							<li><a href="#section-2">SOBRE NÓS</a></li>
-							<li><a href="#section-3">DEPOIMENTOS</a></li>
-							<li><a href="#section-4">ENTRAR</a></li>
-							<li><a href="#section-5">CONTATO</a></li>
-						</ul>
-					</div>
-					<div class="clear"></div>
-				</div>
-			</div>
-			<div class="header-bottom section" id="section-1">
-				<div class="wrap">
-					<div class="img-banner">
-						<div align="center" class="img-banner-info">
-							<h3>O mais simples e completo aplicativo de controle escolar que ajuda você a gerenciar e organizar sua escola.</h3>
-							<button type="button" class="btn btn-primary" >Comece agora!É Gratuito</button>
-						</div>
-						<div class="img-banner-pic">
-							<img src="images/hand-with-iphone.png" alt="" />
-						</div>
-						<div class="clear"> </div>
-					</div>
-				</div>
-			</div>
-			<div class="wrap">
-				<div id="owl-demo" class="owl-carousel">
-					<div class="item"><img src="images/evernote.png" alt="" /></div>
-					<div class="item"><img src="images/microsoft.png" alt="" /></div>
-					<div class="item"><img src="images/google.png" alt="" /></div>
-					<div class="item"><img src="images/sony.png" alt="" /></div>
-					<div class="item"><img src="images/firefox.png" alt="" /></div>
-					<div class="item"><img src="images/evernote.png" alt="" /></div>
-					<div class="item"><img src="images/microsoft.png" alt="" /></div>
-					<div class="item"><img src="images/google.png" alt="" /></div>
-					<div class="item"><img src="images/sony.png" alt="" /></div>
-					<div class="item"><img src="images/firefox.png" alt="" /></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End Header -->
-	<div class="main">
-		<div class="features section" id="section-2">
-			<div class="wrap">
-				<h2>Why tank app ?</h2>
-			</div>
-			<div id="cbp-so-scroller" class="cbp-so-scroller">
-				<section class="cbp-so-section cbp-so-init cbp-so-animate">
-					<article class="cbp-so-side cbp-so-side-left">
-						<div class="features-list">
-							<ul>
-								<li>
-									<div class="heading">
-										<div class="icon">
-											<img src="images/reliable-secure.png" alt="" />
-										</div>
-										<div class="heading-desc">
-											<h3>Reliable and Secure Platform</h3>
-										</div>
-										<div class="clear"></div>
-									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com</p>
-								</li>
-								<li>
-									<div class="heading">
-										<div class="icon">
-											<img src="images/alarm.png" alt="" />
-										</div>
-										<div class="heading-desc">
-											<h3>Everything is perfectly orgainized</h3>
-										</div>
-										<div class="clear"></div>
-									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com</p>
-								</li>
-								<li>
-									<div class="heading">
-										<div class="icon">
-											<img src="images/tweet.png" alt="" />
-										</div>
-										<div class="heading-desc">
-											<h3>Rapid customer support</h3>
-										</div>
-										<div class="clear"></div>
-									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com</p>
-								</li>
-								<li>
-									<div class="heading">
-										<div class="icon">
-											<img src="images/eclipse.png" alt="" />
-										</div>
-										<div class="heading-desc">
-											<h3>Tons of features and easy to use</h3>
-										</div>
-										<div class="clear"></div>
-									</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com</p>
-								</li>
-							</ul>
-						</div>
-					</article>
-					<figure class="cbp-so-side cbp-so-side-right app-overview-img">
-						<img src="images/mac.png" alt="" />
-					</figure>
-				</section>
-			</div>
-		</div>
-		
-		<div class="content-middle section" id="section-3">
-			<div class="testimonials">
-				<div class="wrap">
-					<h2>Why tank app different ?</h2>
-					<div class="slider single-item">
-						<div>
-							<h3><span><img src="images/clouds.png" alt="" /></span>Works on any device anyware</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
-						</div>
-						<div>
-							<h3><span><img src="images/clouds.png" alt="" /></span>Brenda Gonzales, Feddapps</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
-						</div>
-						<div>
-							<h3><span><img src="images/clouds.png" alt="" /></span>Works on any device anyware</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
-						</div>
-						<div>
-							<h3><span><img src="images/clouds.png" alt="" /></span>Brenda Gonzales, Stockapps</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
-						</div>
-						<div>
-							<h3><span><img src="images/clouds.png" alt="" /></span>Works on any device anyware</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="features section" id="section-4">
-		<div class="wrap">
-			<div class="img-banner">
-				<div class="img-banner-info">
-					<h1>RECEBA NOSSAS<br/>PRÓXIMAS NOVIDADES</h1>
-					<h3>Gerencie e organize seu fluxo escolar</h3>
-					
-					<div class="sign_up">
-						<p>Inscrição <span>Free</span></p>
-						<form>
-							<input type="text" value="" placeholder="Informe seu E-Mail" />
-							<input type="submit" value="ENVIAR">
-							<div class="clear"></div>
-						</form>
-					</div>
-				</div>
-				<div class="img-banner-pic">
-					<img src="images/hand-with-iphone.png" alt="" />
-				</div>
-				<div class="clear"> </div>
-			</div>
-		</div>
-	</div>
-	<div class="footer section" id="section-5">
-		<div class="footer-top">
-			<div class="wrap">
-				<!-- Contact -->
-				<div class="contact">
-					<h2>SAVE TIME & GAIN AGILITY</h2>
-					<h4>Using our cloud Monitoring Services So you can Focous on Runing Yours Better </h4>
-					<div class="contact-form">
-						<form>
-							<input type="text" value="" placeholder="Enter Your E-mail Adress">
-							<input type="submit" value="Sign Up">
-							<div class="clear"></div>
-						</form>
-					</div>
-				</div>
-			</div>
-			<!-- End Contact -->
-		</div>
-	</div>
-	<div class="footer-bottom">
-		<div class="wrap">
-			<div class="footer-btm-left">
-				<a href="#"><img src="images/logoProescTopo.png" alt="" /></a>
-			</div>
-			<div class="footer-btm-right">
-				<ul class="footer-links">
-					<li><a href="#section-1" class="scroll">Home</a></li>
-					<li><a href="#section-2" class="scroll">About Us</a></li>
-					<li><a href="#section-1" class="scroll">How it works</a></li>
-					<li><a href="#section-3" class="scroll">Blog</a></li>
-					<li><a href="#section-5" class="scroll">Contact</a></li>
-				</ul>
-				<ul class="social-icons">
-					<li class="tweeter"><a href="#"></a></li>
-					<li class="facebook"><a href="#"></a></li>
-					<li class="google-pluse"><a href="#"></a></li>
-					<div class="clear"></div>
-				</ul>
-				<div class="copy">
-					<p>Company Name © 2014 Template by  <a href="http://w3layouts.com" target="_blank">w3layouts</a> </p>
-				</div>
-			</div>
-			<div class="clear"></div>
-		</div>
-		
-	</div>
-	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
-	<script src="js/modernizr.custom.js" type="text/javascript"></script>
-	<script src="js/classie.js"></script>
-	<script src="js/cbpScroller.js"></script>
-	<script>
-		new cbpScroller( document.getElementById( 'cbp-so-scroller' ) );
-	</script>
-	<script src="js/owl.carousel.js"></script>
-	<link href="css/owl.carousel.css" rel="stylesheet">
-	<script>
-	$(document).ready(function() {
-	$("#owl-demo").owlCarousel({
-	slideSpeed : 300,
-	autoPlay:2000,
-	pagination:false,
-	navigationText:false,
-	itemsMobile : false //
-	});
-	});
-	</script>
-	<link rel="stylesheet" type="text/css" href="css/slick.css" />
-	<script type="text/javascript" src="js/slick.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$('.single-item').slick({
-			dots: true,
-			infinite: true,
-			speed: 300,
-			autoplay:true,
-			arrows:false,
-			slidesToShow: 1,
-			slidesToScroll: 1
-			});
-	});
-	</script>
-	<script src="js/jquery.scrollTo.js"></script>
-	<script src="js/jquery.nav.js"></script>
-	<script type="text/javascript">
-	$(document).ready(function() {
-		$('#nav').onePageNav({
-			begin: function() {
-			console.log('start')
-			},
-			end: function() {
-			console.log('stop')
-			}
-		});
-	});
-	</script>
-	<script type="text/javascript">
-	jQuery(document).ready(function($) {
-					$(".scroll").click(function(event){
-				event.preventDefault();
-				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-			});
-		});
-	</script>
-</div>
-</body>
-</html>
+<!DOCTYPE html>
+ <html>
+ <head>
+-	<title>INDEX</title>
++	<title>Git</title>
+ 	<link rel="stylesheet" href="css/bootstrap.min.css" />
+ 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+ 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+ @@ -17,12 +17,19 @@
+ </head>
+ <body>
+ <!-- BOTÃO QUE CHAMA A MODAL -->
+-<p><a href="#myModal" id="btn-show-modal" role="button" class="btn btn-info" data-toggle="modal">Visualizar anexos</a></p>
+-<div>
+-    <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
+-      <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+-      <button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+-    </div>
++	<div>
++	    <div class="well" style="max-width: 400px; margin: 0 auto 10px;">
++	      <a href="#myModal" id="btn-show-modal" role="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal">Adicionar Anexo</a>
++	      <a href="#myModal" id="btn-show-modal" role="button" class="btn btn-default btn-lg btn-block" data-toggle="modal" >Visualizar anexos</a>
++	      <br>
++		<form>
++            <div class="input-append">
++              <input class="input-large" id="appendedInputButton" type="text" placeholder="Insira o nome do arquivo!!">
++              <button class="btn" type="button">Enviar</button>
++            </div>
++        </form>        
++	</div>
++
+   </div>
+ <!-- MODAL A SER CHAMADA -->
+ <div id="myModal" class="modal hide fade" id="dialog-example" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
